# warc

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: hello_warc.rs  read_file.rs  read_filtered.rs  read_gzip.rs  read_raw.rs  write_file.rs  write_gzip.rs  write_raw.rs
src/: error.rs  file.rs  header.rs  lib.rs  parser.rs  record.rs  record_type.rs  truncated_type.rs  version.rs  warc_reader.rs  warc_record.rs  warc_types.rs  warc_version.rs  warc_writer.rs
src/header/: content_length.rs  content_type.rs  mod.rs  warc_block_digest.rs  warc_concurrent_to.rs  warc_date.rs  warc_filename.rs  warc_identified_payload_type.rs  warc_ip_address.rs  warc_payload_digest.rs  warc_profile.rs  warc_record_id.rs  warc_refers_to.rs  warc_segment_number.rs  warc_segment_origin_id.rs  warc_segment_total_length.rs  warc_target_uri.rs  warc_truncated.rs  warc_type.rs  warc_warcinfo_id.rs
