[package]
name = "warc"
version = "0.0.4"
description = "A Rust library for reading and writing WARC files."
readme = "README.md"
repository = "https://github.com/jedireza/warc"
documentation = "https://docs.rs/crate/warc/"
license = "MIT"
authors = ["Reza Akhavan <reza@akhavan.me>"]
keywords = ["warc", "web", "archive"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
http = "0.2.1"
nom = "5.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
