[package]
name = "warc"
version = "0.4.0"
description = "A Rust library for reading and writing WARC files."
readme = "README.md"
repository = "https://github.com/jedireza/warc"
documentation = "https://docs.rs/crate/warc/"
license = "MIT"
authors = ["Reza Akhavan <reza@akhavan.me>"]
keywords = ["warc", "web", "archive"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
nom = "7.1.3"
url = "2"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.libflate]
version = "1"
optional = true

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[features]
default = ["gzip"]
gzip = ["libflate"]
with_serde = ["serde"]
